dist_icon48_DATA = 48x48/GameConqueror.png
dist_icon72_DATA = 72x72/GameConqueror.png
dist_icon128_DATA = 128x128/GameConqueror.png
EXTRA_DIST = $(icons48_DATA) $(icons72_DATA) $(icons128_DATA)

icon48dir = $(datadir)/icons/hicolor/48x48/apps
icon72dir = $(datadir)/icons/hicolor/72x72/apps
icon128dir = $(datadir)/icons/hicolor/128x128/apps
