dist_bin_SCRIPTS = gameconqueror
dist_gameconqueror_DATA = GameConqueror.xml GameConqueror_128x128.png GameConqueror_72x72.png
dist_gameconqueror_DATA += backend.py consts.py misc.py hexview.py GameConqueror.py
dist_icons_DATA = GameConqueror_128x128.png GameConqueror_72x72.png 
dist_desktop_DATA = GameConqueror.desktop
dist_doc_DATA = README TODO COPYING
EXTRA_DIST = gameconqueror.in consts.py.in

gameconquerordir=$(datadir)/gameconqueror
iconsdir=$(datadir)/pixmaps
desktopdir=$(datadir)/applications
